<resources>
    <string name="app_name">Suitmedia</string>
    <string name="icon_logo">icon_logo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="is_palindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="name_error_empty">Name Field cannot be empty</string>
    <string name="palindrome_error_empty">Palindrome Field cannot be empty</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="sample_name">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="user_profile">user_profile</string>
    <string name="email_sample">EMAIL@EMAIL.COM</string>
    <string name="user_name">FIRSTNAME LASTNAME</string>
    <string name="empty_user">No User</string>
    <string name="third_screen">Third Screen</string>
    <string name="server_error">Server Error</string>
    <string name="try_again">Try Again</string>
</resources>