<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.third_screen.ThirdActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow"
            app:title="@string/third_screen"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:titleTextColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@android:color/darker_gray" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_pages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        tools:layout_editor_absoluteX="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_error_empty"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:layout_height="0dp"
        android:text="@string/empty_user"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <LinearLayout
        android:id="@+id/error_server"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_error"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <com.dicoding.suitmedia.ui.customview.MyBlueButton
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/try_again" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="150dp"
        android:visibility="visible"
        android:indeterminateTint="@android:color/darker_gray"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>